--- a/Front.html
+++ b/Front.html
@@ -38,8 +38,8 @@
         <button type="submit">Add Product</button>
     </form>
 
-    <h2>Product List</h2>
-    <!-- bug pada line 41 sudah saya betulkan, pak -->
+    <h2>Product List</h2
+    <!-- bug pada line 41 segera dibetulkan yaa -->
     <ul id="productList"></ul>
 
     <script>
