Sudah dibetulin Pak

--- a/Front.html
+++ b/Front.html
@@ -39,7 +39,7 @@
     </form>
 
     <h2>Product List</h2>
-    <!-- bug pada line 41 sudah dibetulin -->
+    <!-- bug pada line 41 sudah dibetulin pak -->
     <ul id="productList"></ul>
 
     <script>
